--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -1,3 +1,12 @@
+/**
+ * @Author: Thomas Meeson <meesont>
+ * @Date:   11-10-2018
+ * @Last modified by:   meesont
+ * @Last modified time: 11-10-2018
+ * @Copyright: Copyright © 2018 Thomas Meeson
+ */
+
+
 .container {
   padding-top: 20px;
 }
