--- a/Stylesheets/customBootstrap.css
+++ b/Stylesheets/customBootstrap.css
@@ -1,8 +1,8 @@
 /**
  * @Author: Thomas Meeson <meesont>
  * @Date:   11-10-2018
- * @Last modified by:   meesont
- * @Last modified time: 12-10-2018
+ * @Last modified by:   thomas
+ * @Last modified time: 02-01-2019
  * @License: Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
