--- a/Stylesheets/customBootstrap.css
+++ b/Stylesheets/customBootstrap.css
@@ -46,3 +46,16 @@ limitations under the License.
 .bg-rgsgreen { /* a CSS class that will add a background colour that matches RGS's green colour*/
   background: #275c48;
 }
+
+.container {
+  /* padding-top: 20px; */
+  padding: 4rem 2rem;
+  background-color: #e9ecef;
+  border-radius: .3rem;
+}
+
+.nav-item:hover {
+  background-color: #014a37;
+  height: 100%;
+  border-radius: 10px;
+}
