--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -18,16 +18,13 @@ limitations under the License.
  */
 
 
-.container {
-  padding-top: 20px;
-}
 
 html {
   height: 100%; /*To enable background to fit fully */
 }
 
 body {
-  background-color: #F0ECE3; /*Simple off white color for background*/
+  /* background-color: #F0ECE3; /*Simple off white color for background*/
+  background-color: #e9ecef;
   padding-top: 70px;
-
 }
